[gd_scene load_steps=4 format=3 uid="uid://4ct82h8vsc13"]

[ext_resource type="Script" path="res://UI/StructureInfo.gd" id="1_xoyyw"]
[ext_resource type="StyleBox" uid="uid://csfyndq5jikdl" path="res://Styles/UnhighlightedButton.tres" id="2_m6pfh"]
[ext_resource type="StyleBox" uid="uid://snaixfnew7ko" path="res://Styles/HighlightedButton.tres" id="3_gvv8m"]

[node name="StructureInfo" type="PanelContainer"]
offset_right = 8.0
offset_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_xoyyw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StructureName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hello"
horizontal_alignment = 1

[node name="StructureTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 5

[node name="Cats" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="StatGains" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Stars" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_m6pfh")
theme_override_styles/hover = ExtResource("3_gvv8m")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
